* device-edit.php | introduction BETA script
* class DH | extend method findXPath to accept array with multiple xPath strings
* panos-xml-issue-detector | extend to support FAWKES config syntax
* pa_device-edit - new util script to display VSYS/DeviceGroup/Template/TemplateStack/Container/DeviceCloud informaiton
* class PH | improvments to be prepared for next feature pan-os-php API

EXAMPLES:
* update template script to show how UTIL() class usage make your scripting life easier
* update template script to add $util->save_our_work() method at the end

BUGFIX:
* class AddressStore - introduce AddressGroup validation for method  nestedPointOfView()
* UTIL | bugfix related to display_error_usage_exit usage from class UTIL
* UTIL | class CallContext - introduce $util variable to use single ava
* class SecurityProfileStor | bugfix for calling URLProfileStore and cu…  …
* class customURLProfileStore | bugfix if XMLnode 'list' is not available
* class IPsecTunnel | bugfix NOT create XML node 'proxy-id-v6' if not avai…
* UTIL | bugfix to get argument 'apitimeout=XYZ' into working mode
* UTIL | reinitiate class PH() at calling of UTIL()
* UTIL | pa_rule-edit actions=exportToExcel - related to class Schedule() introduce in the past
* UTIL | pa_address-edit actions=replaceByMembersAndDelete - missing validation if object is group
* UTIL | pa_service-edit actions=replaceByMembersAndDelete - missing validation if object is group
* class SecurityRule | bugfix for reading Schedule Object if defined on parentDG / shared level
* class SecurityRule | bugfix for method rewriteSecProfXML() to remove XML childelement only once
* class IPsecTunnel | bugfix in load_from_domxml() if XML Node 'protocol' not found 


2.0.4 (20210519)
UTILS:
* pa-address/service/tag/schedule-edit introduce argument loadpanoramapushedconfig to display local and panorama pushed objects


2.0.3 (20210517)
BUGFIX:
* bugfix for pa_addressgroup-merger and pa_service-merger


2.0.2
UTILS: