@@ -12,6 +12,8 @@ UTILS:
 * panos-xml-issue-detector | extend to support FAWKES config syntax
 * pa_device-edit - new util script to display VSYS/DeviceGroup/Template/TemplateStack/Container/DeviceCloud informaiton
 * class PH | improvments to be prepared for next feature pan-os-php API
+* routing-/interface-/vwire-edit - move from develop to util folder
+* zone-edit script - start using NETWORKUTIL - to better support Panorama configuration
 
 EXAMPLES:
 * update template script to show how UTIL() class usage make your scripting life easier
